2001-07-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmForm/FvwmForm.c (OpenWindows):
	(main):
	(ParseConfigLine):
	adapted Xinerama support to new interface

	* FvwmBanner/FvwmBanner.c (main):
	(parseOptions):
	* FvwmBanner/Makefile.am (LDADD):
	added Xinerama support

2001-07-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmForm/FvwmForm.c (RedrawText):
	applied fix for display strings from Dmitry Bolkhovityanov (bug #745)
	(OpenWindows):
	adapted to new signature of XineramaSupportCenterCurrent()

2001-07-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTheme/FvwmTheme.c (parse_colorset):
	applied shadow/hilight patch from Hippo

2001-07-23  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/*:
	Applied D.Y. Bolkhovityanov AutoHide TaskBar patch

2001-07-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmScript/Instructions.c:
	* FvwmEvent/FvwmEvent.c:
	* FvwmWharf/FvwmWharf.c:
	include time.h to fix warning

	* FvwmForm/Makefile.am:
	fix for xinerama detection

2001-07-18  Dan Espen  <dane@mk.telcordia.com>

	* FvwmIconBox/FvwmIconBox.c (MySendFvwmPipe): Send the "continue" field
	using a long.  Bernhard Simon reports that FvwmIconBox now works.

2001-07-17  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/Instruction.c (ChangeFont):
	Fixed a core dump when changing multibyte font and loading fail

	* FvwmScript/Widget/TextField.c:
	Translate the comments into "English"

2001-07-17  Dan Espen  <dane@mk.telcordia.com>

	* FvwmIconBox/FvwmIconBox.c: Send size of module message using a long.
	Fixes exiting on 64bit platforms.

2001-07-03  Mikhael Goikhman  <migo@homemail.com>

	* FvwmScript/Scripts/Makefile.am:
	don't include FvwmScript-Setup95 to DIST

	* FvwmEvent/Makefile.am:
	* FvwmForm/Makefile.am:
	* FvwmRearrange/Makefile.am:
	* FvwmScript/Scripts/Makefile.am:
	When creating FvwmAudio, FvwmTalk, FvwmForm-Setup, FvwmCascade,
	FvwmTile, FvwmScript-Setup95 add dependency of Makefile, so
	these files are rebuilt when prefix is changed.